--- a/ui_src/.gitignore
+++ b/ui_src/.gitignore
@@ -12,11 +12,18 @@
 /build
 
 # misc
+.directory
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+
+.holochain
+dna-src/dna
+conductor-config.toml
+agent-1.key
 
 npm-debug.log*
 yarn-debug.log*
