--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React GraphQL Holochain hApp demonstrating how to use GraphQL with Holochain",
   "main": "index.js",
   "scripts": {
-    "install": "npm install && cd ui_src npm install",
+    "hc:install": "npm install && cd ui_src && npm install",
     "hc:keygen": "hc keygen -n --path ./keystores/agent1.keystore",
     "hc:config": "cd dna_src && hc test --testfile test/config-generate.js | tee conductor-output.txt && node test/config-copy.js",
     "hc:test": "cd dna_src && hc test",
