--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hc:package": "cd dna_src && hc package",
     "hc:run": "holochain -c ./1-conductor-config.toml",
     "hc:start": "npm run hc:config && npm run hc:run",
+    "ui:connect-to-conductor": "cd ui_src && node connect-to-conductor",
     "ui:start": "cd ui_src && npm run start:live",
     "start": "nf start"
   },
