--- a/ui_src/package.json
+++ b/ui_src/package.json
@@ -22,7 +22,7 @@
     "react-scripts": "3.3.1"
   },
   "scripts": {
-    "start": "npm run start:live",
+    "start": "yarn start:live",
     "start:live": "REACT_APP_MOCK_DNA_CONNECTION='false' react-scripts start",
     "start:mock": "REACT_APP_MOCK_DNA_CONNECTION='true' react-scripts start",
     "build": "react-scripts build",
