Updated to 0.0.46-alpha1 and made package.json names consistent

--- a/ui_src/package.json
+++ b/ui_src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happ-ui-template",
+  "name": "react-graphql-template",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
